// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Highlight component Matches the snapshot 1`] = `
<DocumentFragment>
  <mark
    class="ssb-mark"
  >
     «Highlight» 
  </mark>
</DocumentFragment>
`;

exports[`Highlight component Toggles classNames correctly 1`] = `
<DocumentFragment>
  <mark
    class="ssb-mark negative"
  >
     «Highlight» 
  </mark>
</DocumentFragment>
`;
